[package]
name = "dmd_core"
description = "AT&T / Teletype DMD 5620 Terminal Emulator - Core Library"
version = "0.6.6"
authors = ["Seth Morabito <web@loomcom.com>"]
homepage = "https://github.com/sethm/dmd_core"
repository = "https://github.com/sethm/dmd_core"
readme = "README.md"
edition = "2021"
license = "MIT"
categories = ["simulation"]

[dependencies]
lazy_static = "~1.4"
libc = "~0.2"

[profile.release]
debug = true

[lib]
crate-type = ["staticlib", "rlib"]

[badges]
travis-ci = { repository = "https://github.com/sethm/dmd_core", branch = "master" }

maintenance = { status = "actively-developed" }
