[package]
name = "dmd_core"
description = "AT&T / Teletype DMD 5620 Terminal Emulator - Core Library"
version = "0.7.1"
authors = ["Seth Morabito <web@loomcom.com>"]
homepage = "https://github.com/sethm/dmd_core"
repository = "https://github.com/sethm/dmd_core"
readme = "README.md"
edition = "2018"
license = "MIT"
categories = ["simulation"]

[dependencies]
log = { version = "0.4.8", features = ["std"] }
env_logger = "0.9.0"
lazy_static = "~1.4"
libc = "~0.2"
ringbuffer = "0.8.5"

[profile.release]
debug = true

[lib]
crate-type = ["staticlib", "rlib"]

[badges]
travis-ci = { repository = "https://github.com/sethm/dmd_core", branch = "master" }

maintenance = { status = "actively-developed" }
